# VoodoOS

./: .gitignore  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/routes/: orchestrator.py  pipeline.py
apps/api/app/schemas/: orchestrator.py  pipeline.py
apps/api/app/services/: orchestrator_service.py  pipeline_service.py
configs/app/: default.yaml
configs/policies/: capability-policy.yaml
docs/architecture/: bundle-11-orchestrator-api-contract.md  bundle-12-trace-audit-retrieval.md  current-baseline.md
docs/roadmap/: current-phase.md
scripts/: bootstrap.sh  check.sh
tests/unit/: test_config_loader.py  test_decision_engine.py  test_decision_trace_store.py  test_event_logger.py  test_hard_stop.py  test_memory_repository.py  test_orchestrator.py  test_orchestrator_api.py  test_orchestrator_integration.py  test_permission_engine.py  test_pipeline_api.py  test_scoring.py  test_sqlite_audit_store.py  test_sqlite_memory_store.py  test_states.py  test_task_executor.py  test_workflow_runtime.py
