[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voodoos"
version = "0.1.0"
description = "VOODOO OS — decision-first AI operating system starter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "redis>=5.0.8,<6.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.6.3,<1.0.0",
  "black>=24.8.0,<25.0.0",
  "mypy>=1.11.2,<2.0.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
